# bpc-pc1t-rezervacni-system

./: CMakeLists.txt  README.md  casy.txt  filmy.txt  main.cpp  main.h  prazdny_kinosal.txt  sal_1.txt  zpracovani_kinosalu.h
